# work

./: GPIO.cpp  RS_485.cpp  Uart.cpp  gpiolib.c  gpiolib.cpp  serial_robotic.cpp  serial_robotic.h  servo_hal.cpp
Protocol2/: CMakeLists.txt  test
Protocol2/src/: crc16  crc16.cpp  masi_main.cpp  masi_proto2.cpp  masi_proto2.h  masi_uart.cpp  masi_uart.h
pthreadtest/: CMakeLists.txt  comunication_pthread.cpp  pthread2.cpp  pthreadT1.cpp
pthreadtest/builds/: CMakeCache.txt  Makefile  cmake_install.cmake  pthread2  pthreadT1
